tests/ui/impl-trait/in-trait/alias-bounds-when-not-wf.stderr
warning: the feature `lazy_type_alias` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/alias-bounds-when-not-wf.rs:3:12
   |
LL | #![feature(lazy_type_alias)]
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #112792 <https://github.com/rust-lang/rust/issues/112792> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0271]: type mismatch resolving `A<usize> normalizes-to _`
  --> $DIR/alias-bounds-when-not-wf.rs:16:13
   |
LL | fn hello(_: W<A<usize>>) {}
   |             ^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `A<usize> normalizes-to _`
  --> $DIR/alias-bounds-when-not-wf.rs:16:10
   |
LL | fn hello(_: W<A<usize>>) {}
   |          ^ types differ

error[E0271]: type mismatch resolving `A<usize> normalizes-to _`
  --> $DIR/alias-bounds-when-not-wf.rs:16:10
   |
LL | fn hello(_: W<A<usize>>) {}
   |          ^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0271]: type mismatch resolving `A<usize> normalizes-to _`
  --> $DIR/alias-bounds-when-not-wf.rs:16:1
   |
LL | fn hello(_: W<A<usize>>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
